Background image changed on quote. Reordered all sections.

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 <a href="index.html"><li>Home</li></a>
                 <a href="#about"><li>About Me</li></a>
                 <a href="#projects"><li>Recent Projects</li></a>
+                <a href="#expertise"><li>Graphic Design</li></a>
                 <a href="#technology"><li>Skills and Technology</li></a>
-                <a href="#articles"><li>Articles</li></a>
                 <a href="#hire"><li>Hire Me</li></a>
                 <a href="resume.html"><li>Resume</li></a>
             </ul>
@@ -78,7 +78,6 @@
         </header>
 
 <!-- About Me Section -->
-
         <section id="about" class="about section">
             <div class="container">
                 <div class="row">
@@ -93,7 +92,6 @@
         </section>
 
 <!-- Recent Projects Section -->
-
         <section id="projects" class="projects section">
             <div class="container">
                 <h2 class="title">Recent Projects</h2>
@@ -106,7 +104,7 @@
                             <div class="pwj-card-content">
                                 <h3>Expressions Learning Center</h3>
                                 <p>
-                                  Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
+                                  The Expressions Learner Center website is a single-page app which utilizes  Javascript, jQuery, and Sass to create design for potential customers. Additionally, it provides a responsive sign-up form to gather information.
                                 </p>
                             </div>
                         </div>
@@ -119,7 +117,7 @@
                             <div class="pwj-card-content">
                                 <h3>UCCI Home Inspections</h3>
                                 <p>
-                                    Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
+                                  The UCCI Home Inspection website is built using Bootstrap, Javascript, and AngularJS to create a scrolling, seamless experience.
                                 </p>
                             </div>
                         </div>
@@ -132,7 +130,7 @@
                             <div class="pwj-card-content">
                                 <h3>Altimeter Clothing</h3>
                                 <p>
-                                  Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
+                                  Altimeter Clothing Co. is building on the Shopify platform as an e-commerce storefront. It is used to demonstrate my graphic design abilites.
                                 </p>
                             </div>
                         </div>
@@ -141,51 +139,22 @@
             </div>
         </section>
 
-<!-- Professional Design Section -->
 
-        <section id="expertise" class="expert">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-sm-6 bg-img">
-                        <div></div>
-                    </div>
-                    <div class="col-sm-5 section">
-                        <h2 class="title">Graphic Design</h2>
-                        <div id="expert-slider" class="owl-carousel">
-                            <div class="item">
-                                <p>
-                                  In addition to professional, cutting-edge web design, I am also able to hand-craft custom logos and graphic designs.
-                                </p>
-                            </div>
-                            <div class="item">
-                                <p>
-                                  This means that projects can be conceptulized or completed in a much quicker time frame because work can be done within the same department, or at the same desk.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
 
 <!-- Quote Section -->
-
         <section class="pwj-quote section bg-img">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12">
-                        <!-- <img class="quote" src="./images/"> -->
                        <p>
                          "Clean code is not written by following a set of rules. You don’t become a software craftsman by learning a list of heuristics. Professionalism and craftsmanship come from values that drive disciplines."</p>
                        <p class="author">Robert C. Martin, author of Clean Code: A Handbook of Agile Software Craftsmanship</p>
-                       <!-- <img src="assets/images/mouse.png"> -->
                     </div>
                 </div>
             </div>
         </section>
 
 <!-- Skills and Technology Section -->
-
         <section id="technology" class="work section">
             <div class="container">
                 <h2 class="title">Skills and Technology</h2>
@@ -197,9 +166,6 @@
                             </div>
                             <div class="pwj-card-content">
                                 <h3>HTML5</h3>
-                                <!-- <p>
-                                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                </p> -->
                             </div>
                         </div>
                     </div>
@@ -210,9 +176,6 @@
                             </div>
                             <div class="pwj-card-content">
                                 <h3>CSS3</h3>
-                                <!-- <p>
-                                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                </p> -->
                             </div>
                         </div>
                     </div>
@@ -223,9 +186,6 @@
                             </div>
                             <div class="pwj-card-content">
                                 <h3>JavaScript</h3>
-                                <!-- <p>
-                                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                </p> -->
                             </div>
                         </div>
                     </div>
@@ -236,9 +196,6 @@
                             </div>
                             <div class="pwj-card-content">
                                 <h3>Python/Django</h3>
-                                <!-- <p>
-                                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                </p> -->
                             </div>
                         </div>
                     </div>
@@ -249,9 +206,6 @@
                             </div>
                             <div class="pwj-card-content">
                                 <h3>React</h3>
-                                <!-- <p>
-                                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                </p> -->
                             </div>
                         </div>
                     </div>
@@ -262,9 +216,6 @@
                             </div>
                             <div class="pwj-card-content">
                                 <h3>Your Technology</h3>
-                                <!-- <p>
-                                   No matter what direction your growing business is headed technologically, I can quickly and efficiently learn these emerging languages, frameworks, and libraries to help your team reach your goals.
-                                </p> -->
                             </div>
                         </div>
                     </div>
@@ -272,106 +223,50 @@
             </div>
         </section>
 
-<!-- Showreel Section -->
+<!-- Graphic Design Section -->
 
-        <!-- <section class="watch bg-img">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-12">
-                        <span>Watch showreel</span>
-                        <a class="popup-youtube btn" href="https://www.youtube.com/watch?v=oMIENcW6QM0"><span class="play-icon"></span></a>
-                        <span>with us</span>
+<section id="expertise" class="expert">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-6 bg-img">
+                <div></div>
+            </div>
+            <div class="col-sm-5 section">
+                <h2 class="title">Graphic Design</h2>
+                <div id="expert-slider" class="owl-carousel">
+                    <div class="item">
+                        <p>
+                          In addition to professional, cutting-edge web design, I am also able to hand-craft custom logos and graphic designs.
+                        </p>
+                    </div>
+                    <div class="item">
+                        <p>
+                          This means that projects can be conceptulized or completed in a much quicker time frame because work can be done within the same department, or at the same desk.
+                        </p>
                     </div>
                 </div>
             </div>
-        </section> -->
-
-<!-- Articles Section -->
-
-        <section id="articles" class="team section">
-            <div class="container">
-                <h2 class="title">Articles</h2>
-                <div class="row">
-                    <div class="col-sm-4">
-                        <div class="pwj-card">
-                            <div class="pwj-card-header">
-                                <img class="img-responsive" src="./images/2.jpg">
-                            </div>
-                            <div class="pwj-card-content">
-                                <h3>Top's Big Question:</h3>
-                                <h4>How Do You Choose Your First Language?</h4>
-                                <p>
-                                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                </p>
-                                <div class="social-icons">
-                                    <ul>
-                                        <a href="#"><li><span class="ion-social-facebook"></span></li></a>
-                                        <a href="#"><li><span class="ion-social-twitter"></span></li></a>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="pwj-card">
-                            <div class="pwj-card-header">
-                                <img class="img-responsive" src="assets/images/9.jpg">
-                            </div>
-                            <div class="pwj-card-content">
-                                <h3>Difficult Concepts Made Simple:</h3>
-                                <h4>Data Sets in Python</h4>
-                                <p>
-                                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                </p>
-                                <div class="social-icons">
-                                    <ul>
-                                        <a href="#"><li><span class="ion-social-facebook"></span></li></a>
-                                        <a href="#"><li><span class="ion-social-twitter"></span></li></a>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="pwj-card">
-                            <div class="pwj-card-header">
-                                <img class="img-responsive" src="assets/images/10.jpg">
-                            </div>
-                            <div class="pwj-card-content">
-                                <h3>Content Title 3</h3>
-                                <p>
-                                  Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
-                                </p>
-                                <div class="social-icons">
-                                    <ul>
-                                        <a href="#"><li><span class="ion-social-facebook"></span></li></a>
-                                        <a href="#"><li><span class="ion-social-twitter"></span></li></a>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+        </div>
+    </div>
+</section>
 
 <!-- Email Contact Section -->
 
-        <section class="email section bg-img">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-12">
-                        <p>Let's talk about how we can help each other...</p>
-                        <form class="form-inline" action="https://formspree.io/justincaldwellslc@gmail.com" method="POST" />
-                            <div class="form-group">
-                                <input type="email" class="form-control" id="user-email" placeholder="Email here...">
-                            </div>
-                            <button type="submit" class="btn pwj-btn">Go!</button>
-                        </form>
+<section class="email section bg-img">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <p>Let's talk about how we can help each other...</p>
+                <form class="form-inline" action="https://formspree.io/justincaldwellslc@gmail.com" method="POST" />
+                    <div class="form-group">
+                        <input type="email" class="form-control" id="user-email" placeholder="Email here...">
                     </div>
-                </div>
+                    <button type="submit" class="btn pwj-btn">Go!</button>
+                </form>
             </div>
-        </section>
+        </div>
+    </div>
+</section>
 
 <!-- Hire Me Section -->
 
