--- a/resume.html
+++ b/resume.html
@@ -78,7 +78,8 @@
                                     <div class="pwj-card-content">
                                         <h3>DevMountain Full Stack</h3>
                                         <p>
-Graduated Cohort 12 of DevMountain’s Full Stack Web Development program. Studied under mentors such as Jeremy Robertson (Yoodlize, DevMountain, Jane.com), Ben Callis (SimpleNexus, Domo, Jane.com), and Ryan Hamblin (Lambda School, Nokē).                                        </p>
+                                          Graduated Cohort 12 of DevMountain’s Full Stack Web Development program. Studied under mentors such as Jeremy Robertson (Yoodlize, DevMountain, Jane.com), Ben Callis (SimpleNexus, Domo, Jane.com), and Ryan Hamblin (Lambda School, Nokē).
+                                        </p>
                                     </div>
                                 </div>
                             </div>
