--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="col-sm-4">
                 <div class="pwj-card">
                     <div class="pwj-card-header">
-                        <a href="expressions-learning-center/index.html"><img class="img-responsive" src="images/expressionsmain.png"></a>
+                        <a href="expressions-learning-center/index.html" target="_blank"><img class="img-responsive" src="images/expressionsmain.png"></a>
                     </div>
                     <div class="pwj-card-content">
                         <h3>Expressions Learning Center</h3>
@@ -112,7 +112,7 @@
             <div class="col-sm-4">
                 <div class="pwj-card">
                     <div class="pwj-card-header">
-                        <a href="ucci-landing-page/index.html"><img class="img-responsive" src="images/uccimain.png"></a>
+                        <a href="ucci-landing-page/index.html" target="_blank"><img class="img-responsive" src="images/uccimain.png"></a>
                     </div>
                     <div class="pwj-card-content">
                         <h3>UCCI Home Inspections</h3>
@@ -125,7 +125,7 @@
             <div class="col-sm-4">
                 <div class="pwj-card">
                     <div class="pwj-card-header">
-                        <a href="https://www.altimeterclothing.com"><img class="img-responsive" src="images/altimeterclothing.png"></a>
+                        <a href="https://www.altimeterclothing.com" target="_blank"><img class="img-responsive" src="images/altimeterclothing.png"></a>
                     </div>
                     <div class="pwj-card-content">
                         <h3>Altimeter Clothing</h3>
