Bio added. Final edits.

--- a/index.html
+++ b/index.html
@@ -84,8 +84,11 @@
             <div class="col-sm-8 col-sm-offset-2">
                 <h2 class="title">About Me</h2>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.                        </p>
-                <img src="./images/circleheadshot.png">
+                  My name is Justin Caldwell, and I am a full stack developer specializing in responsive web applications and graphic design.  Utilizing scripting languages and technologies such as HTML and CSS, Javascript and its associated libraries and frameworks, as well as Python, I am able to rapidly design and prototype innovative solutions to meet your customers' specifications.
+                </p>
+                <p>
+                  If your company is currently developing software using another modern platform or language, I can quickly adapt in order to help fluently write elegant code to aid your existing team. Let’s talk about how we can work together!                          <img src="./images/circleheadshot.png">
+                </p>
             </div>
         </div>
     </div>
@@ -234,7 +237,7 @@
                 <div id="expert-slider" class="owl-carousel">
                     <div class="item">
                         <p>
-                          In addition to professional, cutting-edge web design, I am also able to hand-craft custom logos and graphic designs.
+                          In addition to professional, cutting-edge web design, I am also able to handcraft custom logos and graphic designs.
                         </p>
                     </div>
                     <div class="item">
