Hire section fixed.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a href="#projects"><li>Recent Projects</li></a>
                 <a href="#expertise"><li>Graphic Design</li></a>
                 <a href="#technology"><li>Skills and Technology</li></a>
-                <a href="#hire"><li>Hire Me</li></a>
+                <a href="#hire"><li>Hiring Info</li></a>
                 <a href="resume.html"><li>Resume</li></a>
             </ul>
         </div>
@@ -280,8 +280,8 @@
 <!-- Hire Me Section -->
 <section id="hire" class="contact section">
     <div class="container">
-        <h2 class="title">Hire Me</h2>
-        <p>I am currently looking for a job</p>
+        <h2 class="title">Let's Team Up</h2>
+        <p>Make me a part of your team</p>
         <div class="row">
             <div class="col-sm-4">
                 <div class="pwj-card">
