--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 <section id="hire" class="contact section">
     <div class="container">
         <h2 class="title">Let's Team Up</h2>
-        <p>Make me a part of your team</p>
+        <!-- <p>Make me a part of your team</p> -->
         <div class="row">
             <div class="col-sm-4">
                 <div class="pwj-card">
