--- a/resume.html
+++ b/resume.html
@@ -93,7 +93,7 @@
                     <h3>Pluralsight</h3>
                     <p>
                       Completed Pluralsight courses such as CSS Positioning, AngularJS: Getting Started, AngularJS: The Big Picture, and React.js: Getting Started.
-                      Currently studing Data Science.
+                      Currently studying Data Science.
                     </p>
                 </div>
             </div>
@@ -106,7 +106,7 @@
                 <div class="pwj-card-content">
                     <h3>Udemy</h3>
                     <p>
-                      Udemy has been my platform for learning all aspect of Python and Django backend development. Completed Complete Python Bootcamp and Python and Django Full Stack Bootcamp by Jose Portilla. Currently studying Computer Science on Udemy.
+                      Udemy has been my platform for learning all aspects of Python and Django backend development. Finished Complete Python Bootcamp and Python and Django Full Stack Bootcamp by Jose Portilla. Currently studying Computer Science on Udemy.
                     </p>
                 </div>
             </div>
