--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <div class="pwj-card-content">
                         <h3>Altimeter Clothing</h3>
                         <p>
-                          Altimeter Clothing Co. is building on the Shopify platform as an e-commerce storefront. It is used to demonstrate my graphic design abilites.
+                          Altimeter Clothing Co. is built on the Shopify platform as an e-commerce storefront. It is used to demonstrate my graphic design abilites.
                         </p>
                     </div>
                 </div>
